added a README file

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,12 +33,9 @@ body {
     font-size: 20px;
 }
 
-/* replaced section selector with nav selector */
-.header nav ul {
-    list-style-type: none;
-}
-
-/* replaced section selector with nav selector */
+/* replaced section selector with nav selector
+ Deleted ".header nav ul list-style-type: none;" because it wasnt seeming to do anything useful, at least not in "Chrome"
+replaced section selector with nav selector */
 
 .header nav ul li {
     display: inline-block;
@@ -58,7 +55,8 @@ p {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
-    background-image: url("../images/digital-marketing-meeting.jpg");
+    background-image: url("../images/collegues-seriously-contemplating-a-document-together.jpg");
+
     background-size: cover;
     background-position: center;
 }
@@ -89,7 +87,7 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
-/* replaced benefit-lead , benefit-brand and /benefit-cost selectors with  a single whitetext selector
+/* replaced benefit-lead , benefit-brand and /benefit-cost selectors with  a single selector called whitetext
 */
 .whitetext {
     margin-bottom: 32px;
@@ -193,216 +191,3 @@ p {
 .footer h2 {
     font-size: 20px;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* THE OLD DRAFT
-*{
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-}
-
-body {
-    background-color: #d9dcd6;
-}
-
-.header {
-    padding: 20px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color: #2a607c;
-    color: #ffffff;
-}
-
-.header h1 {
-    display: inline-block;
-    font-size: 48px;
-}
-
-.header h1 .seo {
-    color: #d9dcd6;
-}
-
-.header nav {
-    padding-top: 15px;
-    margin-right: 20px;
-    float: right;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 20px;
-}
-
-
-/* this un-does bullet points that normally would default */
-/* .header nav ul {
-    list-style-type: none;
-}
-
-.header nav ul li {
-    display: inline-block;
-    margin-left: 25px;
-}
-
-a {
-    color: #ffffff;
-    text-decoration: none;
-}
-
-p {
-    font-size: 16px;
-}
-
-.hero {
-    height: 800px;
-    width: 100%;
-    margin-bottom: 25px;
-    background-image: url("../images/digital-marketing-meeting.jpg");
-    background-size: cover;
-    background-position: center;
-}
-
-.float-left {
-    float: left;
-    margin-right: 25px;
-}
-
-.float-right {
-    float: right;
-    margin-left: 25px;
-}
-
-.content {
-    width: 75%;
-    display: inline-block;
-    margin-left: 20px;
-}
-
-.benefits {
-    margin-right: 20px;
-    padding: 20px;
-    clear: both;
-    float: right;
-    width: 20%;
-    height: 100%;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #2589bd;
-}
-
-/* I deleted redundant selectors, replaced with single selector named benefit
- */
-/* .benefit {
-    margin-bottom: 32px;
-    color: #ffffff;
-} */ */
-
-
-/* I condensed three redundant class selectors down to two class selectors by deleting two. I did not have to change any HTML because these treatments and selectors are still looking at the "benefit" class */
-/* .benefit h3 {
-    margin-bottom: 10px;
-    text-align: center;
-} */
-
-/* These three selectors looked redundant, so I experimented with commenting the two extras out. I figured out that all I needed was a selector that said ".benefit img" and all images in the class would get the correct CSS treatment */
-
-/* .benefit img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-} */
-
-/*  
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-*/
-
-
-
-/* So far I've tried: using a single class selector for these three boxes, I've also tried selecting ".content h2" both had problems
-*/
-
-/* .margins {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-} */
-
-/*
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-    
-}
-*/
-/* 
-.search-engine-optimization img {
-    max-height: 200px;
-}
-
-.online-reputation-management img {
-    max-height: 200px;
-} */
-
-/* .social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.footer {
-    padding: 30px;
-    clear: both;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    text-align: center;
-}
-
-.footer h2 {
-    font-size: 20px;
-} */ 
