--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,7 +76,8 @@ p {
     display: inline-block;
     margin-left: 20px;
 }
-
+/* replaced benefit-lead , benefit-brand and /benefit-cost selectors with  a single selector called .benefits
+*/
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -86,30 +87,18 @@ p {
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
-}
-/* replaced benefit-lead , benefit-brand and /benefit-cost selectors with  a single selector called whitetext
-*/
-.whitetext {
     margin-bottom: 32px;
     color: #ffffff;
-    
 }
 
-.benefit-lead h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
+/*replaced .benefit-lead h3, benefit-brand h3, and .benefit-cost h3 selectors with a single selector named h3benefits
 */
+.h3benefits {
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+
 .benefit-lead img {
     display: block;
     margin: 10px auto;
