--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@
 body {
     background-color: #d9dcd6;
 }
-
+/* This is my header */
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -24,8 +24,8 @@ body {
 .header h1 .seo {
     color: #d9dcd6;
 }
-/* replaced section selector with nav selector */
-.header nav {
+/* replaced section selector with nav selector because these links are navigation links*/
+header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -33,9 +33,9 @@ body {
     font-size: 20px;
 }
 
-/* replaced section selector with nav selector
- Deleted ".header nav ul list-style-type: none;" because it wasnt seeming to do anything useful, at least not in "Chrome"
-replaced section selector with nav selector */
+header nav ul {
+    list-style-type: none;
+}
 
 .header nav ul li {
     display: inline-block;
@@ -51,6 +51,7 @@ p {
     font-size: 16px;
 }
 
+/*  changed name of the jpg to make it more informational for someone with a screen reader because you can't do alt images in CSS*/
 .hero {
     height: 800px;
     width: 100%;
@@ -61,6 +62,7 @@ p {
     background-position: center;
 }
 
+/* floats take images out of the flow */
 .float-left {
     float: left;
     margin-right: 25px;
@@ -69,8 +71,17 @@ p {
 .float-right {
     float: right;
     margin-left: 25px;
+} 
+/* replaced three selectors with .content img */
+.content img {
+    max-height: 200px;
 }
 
+/* replaced three selectors, .search-engine-optimization h2, .online-reputation-managment h2, and .social-media-marketing h2 , with a single selector- ".content h2" */
+.content h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
 .content {
     width: 75%;
     display: inline-block;
@@ -87,37 +98,32 @@ p {
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
+}
+
+
+ .benefit-types {
     margin-bottom: 32px;
     color: #ffffff;
 }
+    
 
-/*replaced .benefit-lead h3, benefit-brand h3, and .benefit-cost h3 selectors with a single selector named h3benefits
+
+/*replaced .benefit-lead h3, benefit-brand h3, and .benefit-cost h3 selectors with a single selector named ".benefits h3"
 */
-.h3benefits {
+.benefit-types h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-
-.benefit-lead img {
+/* replaced three selectors- .benefit-lead img, .benefit-brand img, and .benefit-cost img, with a single selector, .benefit-types img */
+.benefit-types img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.search-engine-optimization {
+/* Replaced Three selectors, .search-engine-optimization, .online-reputation managment, and .social-media-marketing with a single selector, .benefits */
+.benefit-types {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -126,50 +132,7 @@ p {
     color: #ffffff;
 }
 
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
 
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.search-engine-optimization img {
-    max-height: 200px;
-}
-
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
 
 .footer {
     padding: 30px;
