--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,21 +72,34 @@ p {
     float: right;
     margin-left: 25px;
 } 
-/* replaced three selectors with .content img */
-.content img {
-    max-height: 200px;
-}
 
-/* replaced three selectors, .search-engine-optimization h2, .online-reputation-managment h2, and .social-media-marketing h2 , with a single selector- ".content h2" */
-.content h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
 .content {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
+
+.content-types {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+
+
+/* replaced three selectors with .content img */
+.content-types img {
+    max-height: 200px;
+}
+
+/* replaced three selectors, .search-engine-optimization h2, .online-reputation-managment h2, and .social-media-marketing h2 , with a single selector- ".content h2" */
+.content-types h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+
 /* replaced benefit-lead , benefit-brand and /benefit-cost selectors with  a single selector called .benefits
 */
 .benefits {
@@ -122,15 +135,16 @@ p {
     max-width: 150px;
 }
 
-/* Replaced Three selectors, .search-engine-optimization, .online-reputation managment, and .social-media-marketing with a single selector, .benefits */
-.benefit-types {
+/* Deleted the following 9 lines of code because they were a mistake.
+Replaced Three selectors, .search-engine-optimization, .online-reputation managment, and .social-media-marketing with a single selector, .benefits */
+/* .benefit-types {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
     color: #ffffff;
-}
+} */
 
 
 
